--- a/fish-project-frontend/index.html
+++ b/fish-project-frontend/index.html
@@ -14,6 +14,6 @@
 
 <script type="text/javascript" src="index.js"></script>
 
-<h1>Fish Store</h1>
+<h1>The Fish Store</h1>
 
 <h2>Call XXX-XXX-XXXX to Order</h2>
