added div around Call info

--- a/fish-project-frontend/index.html
+++ b/fish-project-frontend/index.html
@@ -13,4 +13,6 @@
 
 <h1>The Fish Store</h1>
 
-<h2>Call XXX-XXX-XXXX to Order</h2>
+<div class="call-div">
+    <h2>Call XXX-XXX-XXXX to Order</h2>
+</div>
